@@ -15914,7 +15914,12 @@ use feature 'say';
                             if ($meth eq 'new') {
                                 return 'new ' . $info->{'java_type'} . '(' . Perlito5::Java::to_native_args($self->{'arguments'}) . ')'
                             }
-                            return $info->{'java_type'} . '.' . $meth . '(' . Perlito5::Java::to_native_args($self->{'arguments'}) . ')'
+                            if ($self->{'_no_params'}) {
+                                return $info->{'java_type'} . '.' . $meth
+                            }
+                            else {
+                                return $info->{'java_type'} . '.' . $meth . '(' . Perlito5::Java::to_native_args($self->{'arguments'}) . ')'
+                            }
                         }
                     }
                     my $invocant = $self->{'invocant'}->emit_java($level, 'scalar');
@@ -15923,7 +15928,12 @@ use feature 'say';
                         my $Java_var = Perlito5::Java::get_java_var_info();
                         my $type = $Java_var->{$id}->{'type'} || 'PlLvalue';
                         if ($type ne 'PlLvalue') {
-                            return $invocant . '.' . $meth . '(' . Perlito5::Java::to_native_args($self->{'arguments'}) . ')'
+                            if ($self->{'_no_params'}) {
+                                return $invocant . '.' . $meth
+                            }
+                            else {
+                                return $invocant . '.' . $meth . '(' . Perlito5::Java::to_native_args($self->{'arguments'}) . ')'
+                            }
                         }
                     }
                     if ($meth =~ m!^to!) {
