@@ -1,6 +1,8 @@
 
 - Parser:
 -- error message for: "Identifier too long" (Perl limit is 251 characters)
+- Java:
+-- a "method call without parenthesis" will access a Java class/instance variable: my Int $val = Sample->VAL;
 
 9.015 cpan:Perlito5  2015-12-01
 - Docs:
